  * Removed event handler after load so that when you change the image
    associted a media block, other media blocks don't also change
  * Scale imported bitmaps to maximum of 1200x900

0.5
  * Eliminated joyride since it doesn't work on Android.
  * Fixed problem with help container scaling.
  * Added broadcast and on event blocks.
  * Fixed problem with events not triggering if turtle has stopped.
  * Added three-arg flow blocks.
  * Added named boxes.
  * Fixed problem selecting blocks from the blocks palettes.
  * Made separate heaps for each turtle.
  * Reopen palettes after palette updates.
  * Fixed problem running with no start block.
  * Fixed some regressions in macro block palette.
  * Eliminated deprecated code in palettes.
  * Added buttons to palettes for scrolling.

TODO:
  * Music blocks plugin
  * Save errors
  * Display rubrics
  * More efficient until and while?
  * Save to javascript
  * Rtl support
  * Zoom and scroll?
  * Use graphical error messages
  * Make expand an array, one element for each arg or slot
  * User-defined block types (trivial with factory)
  * Three-arg arg blocks (trivial with factory)
  * Artwork beautification?
  * Try to detect difference between unknown flow and arg blocks
  * What palette/block features from the Python version do we need to port?
  * Do we need to add support for plugins init, quit, etc.?

FEATURE IDEAS:
  * Button block (a stack that is run when you click on a button)
    - two args: artwork for the button; action name to take
  * Local variables? (e.g., boxes only defined inside an action?)
  * Pass argments to actions? (and arg blocks to reference them)?
  * Arrays

KNOWN BUGS:
  * Find a scalable approach to drawing on the canvas
  * Not all blocks highlight when using step-by-step mode
  * Camera doesn't work on Android
  * Cannot open plugins loader on Android
  * Sometimes returning to backgrounded project results in empty project